--- a/index.html
+++ b/index.html
@@ -3,102 +3,199 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>$5 a Night with Darryl</title>
+  <title>Spend One Night with Darryl for $5!</title>
   <style>
-    /* Basic Reset and Global Styles */
-    * {
+    body {
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-    
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #ff0000, #ff9900, #33cc33, #0099ff, #9900cc); /* Pride flag */
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: white;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      color: #333;
       text-align: center;
-      position: relative;
-      overflow: hidden;
+      overflow-x: hidden;
+    }
+
+    header {
+      padding: 50px 20px;
+      background: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     h1 {
-      font-size: 64px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      text-transform: uppercase;
-      animation: shiny 2s infinite alternate;
-      text-shadow: 0 0 15px rgba(255, 0, 255, 0.8);
+      font-size: 3rem;
+      margin: 0;
+      color: #ff6f61;
     }
 
-    /* Shiny animation for the title */
-    @keyframes shiny {
-      0% {
-        text-shadow: 0 0 15px rgba(255, 0, 255, 0.8);
-      }
-      100% {
-        text-shadow: 0 0 25px rgba(255, 0, 255, 1);
-      }
+    p {
+      font-size: 1.2rem;
+      margin: 10px 0;
     }
 
-    /* Button for booking */
-    .book-button {
-      background-color: #ff66cc;
-      border: none;
-      color: white;
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .cta-button {
+      display: inline-block;
       padding: 15px 30px;
-      font-size: 24px;
-      cursor: pointer;
+      font-size: 1.5rem;
+      color: #fff;
+      background: #ff6f61;
+      border: none;
       border-radius: 50px;
-      box-shadow: 0 0 10px rgba(255, 0, 255, 0.8);
-      transition: background-color 0.3s ease;
-      margin-top: 30px;
-    }
-
-    .book-button:hover {
-      background-color: #ff3385;
-    }
-
-    /* Images of celebrities */
-    .celebrity-images {
-      margin-top: 40px;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    .celebrity {
-      width: 150px;
-      height: 150px;
-      background-size: cover;
-      border-radius: 50%;
       cursor: pointer;
+      transition: transform 0.3s, background 0.3s;
+    }
+
+    .cta-button:hover {
+      transform: scale(1.1);
+      background: #ff3b2f;
+    }
+
+    .features {
+      display: flex;
+      justify-content: space-around;
+      margin: 50px 0;
+    }
+
+    .feature {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 10px;
+      width: 30%;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s;
     }
 
-    .celebrity:hover {
-      transform: scale(1.1);
+    .feature:hover {
+      transform: translateY(-10px);
     }
-    
+
+    .feature h3 {
+      font-size: 1.5rem;
+      color: #ff6f61;
+    }
+
+    .feature p {
+      font-size: 1rem;
+    }
+
+    footer {
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.8);
+      margin-top: 50px;
+    }
+
+    footer p {
+      margin: 0;
+      font-size: 0.9rem;
+    }
+
+    /* 3D Canvas */
+    #3d-container {
+      width: 100%;
+      height: 400px;
+      margin: 20px 0;
+      position: relative;
+    }
+
+    canvas {
+      display: block;
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Spend One Night with Darryl for $5!</h1>
+    <p>Yes, you read that right. For just $5, you can spend an unforgettable night with the one and only Darryl!</p>
+    <button class="cta-button" onclick="bookNow()">Book Now!</button>
+  </header>
 
-  <!-- Title -->
-  <h1>$5 A NIGHT WITH DARRYL</h1>
+  <div class="container">
+    <!-- 3D Model Container -->
+    <div id="3d-container"></div>
+    <p>Darryl is a world-renowned celebrity, known for his charm, wit, and unforgettable personality. Don't miss this once-in-a-lifetime opportunity!</p>
 
-  <!-- Button to book -->
-  <button class="book-button" onclick="location.href='page2.html'">Finger Darryl And Mrs. Kitty!</button>
-
-  <!-- Celebrity Images -->
-  <div class="celebrity-images">
-    <div class="celebrity" style="background-image: url('https://via.placeholder.com/150x150.png?text=Celebrity+1');" onclick="alert('You clicked on a celebrity!')"></div>
-    <div class="celebrity" style="background-image: url('https://via.placeholder.com/150x150.png?text=Celebrity+2');" onclick="alert('You clicked on another celebrity!')"></div>
+    <div class="features">
+      <div class="feature">
+        <h3>🌟 Exclusive Access</h3>
+        <p>Get exclusive access to Darryl's world. Enjoy private conversations, games, and more!</p>
+      </div>
+      <div class="feature">
+        <h3>🍕 Dinner Included</h3>
+        <p>Enjoy a gourmet dinner with Darryl. He might even cook for you!</p>
+      </div>
+      <div class="feature">
+        <h3>📸 Photo Op</h3>
+        <p>Take home a signed photo to remember your incredible night.</p>
+      </div>
+    </div>
   </div>
 
+  <footer>
+    <p>Disclaimer: This is a fictional website. Darryl is not real (or is he?).</p>
+  </footer>
+
+  <!-- Three.js Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script>
+    // JavaScript for 3D Model
+    let scene, camera, renderer, darryl;
+
+    function init() {
+      // Scene
+      scene = new THREE.Scene();
+
+      // Camera
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / 400, 0.1, 1000);
+      camera.position.z = 5;
+
+      // Renderer
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, 400);
+      document.getElementById('3d-container').appendChild(renderer.domElement);
+
+      // Lighting
+      const light = new THREE.DirectionalLight(0xffffff, 1);
+      light.position.set(5, 5, 5).normalize();
+      scene.add(light);
+
+      // Load 3D Model (Replace with your own model)
+      const loader = new THREE.GLTFLoader();
+      loader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js/examples/models/gltf/Parrot.gltf', function (gltf) {
+        darryl = gltf.scene;
+        scene.add(darryl);
+      });
+
+      // Animation Loop
+      function animate() {
+        requestAnimationFrame(animate);
+        if (darryl) {
+          darryl.rotation.y += 0.01; // Rotate the model
+        }
+        renderer.render(scene, camera);
+      }
+      animate();
+    }
+
+    // Handle Window Resize
+    window.addEventListener('resize', function () {
+      camera.aspect = window.innerWidth / 400;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, 400);
+    });
+
+    // Initialize 3D Scene
+    init();
+
+    // Book Now Function
+    function bookNow() {
+      alert("Congratulations! You've booked your night with Darryl. Get ready for the time of your life!");
+    }
+  </script>
 </body>
 </html>
