--- a/index.html
+++ b/index.html
@@ -1,217 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameOdds - Play & Win!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Inter', sans-serif;
-            background-color: #0e0e0e;
-            color: #fff;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spend One Night with Darryl for $5!</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      color: #333;
+      text-align: center;
+      overflow-x: hidden;
+    }
 
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 40px;
-            background-color: #1a1a1a;
-        }
+    header {
+      padding: 50px 20px;
+      background: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        .navbar .logo {
-            font-size: 24px;
-            font-weight: 700;
-            color: #ff5722;
-        }
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+      color: #ff6f61;
+    }
 
-        .navbar .nav-links a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: 500;
-        }
+    p {
+      font-size: 1.2rem;
+      margin: 10px 0;
+    }
 
-        .navbar .nav-links a:hover {
-            color: #ff5722;
-        }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
 
-        .hero {
-            text-align: center;
-            padding: 100px 20px;
-            background: linear-gradient(180deg, #1a1a1a, #0e0e0e);
-        }
+    .cta-button {
+      display: inline-block;
+      padding: 15px 30px;
+      font-size: 1.5rem;
+      color: #fff;
+      background: #ff6f61;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: transform 0.3s, background 0.3s;
+    }
 
-        .hero h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-        }
+    .cta-button:hover {
+      transform: scale(1.1);
+      background: #ff3b2f;
+    }
 
-        .hero p {
-            font-size: 18px;
-            color: #ccc;
-            margin-bottom: 40px;
-        }
+    .features {
+      display: flex;
+      justify-content: space-around;
+      margin: 50px 0;
+    }
 
-        .hero .cta-button {
-            background-color: #ff5722;
-            color: #fff;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
+    .feature {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 10px;
+      width: 30%;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    }
 
-        .hero .cta-button:hover {
-            background-color: #e64a19;
-        }
+    .feature:hover {
+      transform: translateY(-10px);
+    }
 
-        .games-section {
-            padding: 50px 20px;
-            background-color: #1a1a1a;
-        }
+    .feature h3 {
+      font-size: 1.5rem;
+      color: #ff6f61;
+    }
 
-        .games-section h2 {
-            text-align: center;
-            font-size: 36px;
-            margin-bottom: 40px;
-        }
+    .feature p {
+      font-size: 1rem;
+    }
 
-        .games-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
+    footer {
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.8);
+      margin-top: 50px;
+    }
 
-        .game-card {
-            background-color: #262626;
-            border-radius: 10px;
-            overflow: hidden;
-            text-align: center;
-            padding: 20px;
-        }
+    footer p {
+      margin: 0;
+      font-size: 0.9rem;
+    }
 
-        .game-card img {
-            width: 100%;
-            border-radius: 10px;
-        }
+    /* Roulette Wheel Styles */
+    .roulette-container {
+      position: relative;
+      width: 300px;
+      height: 300px;
+      margin: 50px auto;
+    }
 
-        .game-card h3 {
-            font-size: 20px;
-            margin: 15px 0;
-        }
+    .roulette-wheel {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background: conic-gradient(
+        red 0deg 45deg,
+        green 45deg 90deg,
+        blue 90deg 135deg,
+        yellow 135deg 180deg,
+        purple 180deg 225deg,
+        orange 225deg 270deg,
+        pink 270deg 315deg,
+        cyan 315deg 360deg
+      );
+      position: relative;
+      transition: transform 5s ease-out;
+    }
 
-        .game-card p {
-            font-size: 14px;
-            color: #ccc;
-        }
+    .roulette-pointer {
+      position: absolute;
+      top: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-bottom: 30px solid black;
+    }
 
-        .promotions-section {
-            padding: 50px 20px;
-            background-color: #0e0e0e;
-        }
+    .spin-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      background: #ff6f61;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-        .promotions-section h2 {
-            text-align: center;
-            font-size: 36px;
-            margin-bottom: 40px;
-        }
-
-        .promotion-card {
-            background-color: #262626;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .promotion-card h3 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .promotion-card p {
-            font-size: 16px;
-            color: #ccc;
-        }
-
-        .footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #1a1a1a;
-            color: #ccc;
-        }
-
-        .footer a {
-            color: #ff5722;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    .spin-button:hover {
+      background: #ff3b2f;
+    }
+  </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="logo">GameOdds</div>
-        <div class="nav-links">
-            <a href="#games">Games</a>
-            <a href="#promotions">Promotions</a>
-            <a href="#dashboard">Dashboard</a>
-            <a href="#login">Login</a>
-        </div>
-    </div>
+  <header>
+    <h1>Spend One Night with Darryl for $5!</h1>
+    <p>Yes, you read that right. For just $5, you can spend an unforgettable night with the one and only Darryl!</p>
+    <button class="cta-button" onclick="bookNow()">Book Now!</button>
+  </header>
 
-    <!-- Hero Section -->
-    <div class="hero">
-        <h1>Play, Win, Repeat!</h1>
-        <p>Gamble your in-game currency and items in exciting games of chance. No real money involved!</p>
-        <button class="cta-button">Get Started</button>
+  <div class="container">
+    <!-- Roulette Wheel -->
+    <div class="roulette-container">
+      <div class="roulette-wheel" id="roulette-wheel">
+        <div class="roulette-pointer"></div>
+      </div>
     </div>
+    <button class="spin-button" onclick="spinRoulette()">Spin the Wheel!</button>
 
-    <!-- Games Section -->
-    <div class="games-section" id="games">
-        <h2>Featured Games</h2>
-        <div class="games-grid">
-            <div class="game-card">
-                <img src="https://via.placeholder.com/300" alt="Game 1">
-                <h3>Coin Flip</h3>
-                <p>Simple 50/50 chance to double your funds.</p>
-            </div>
-            <div class="game-card">
-                <img src="https://via.placeholder.com/300" alt="Game 2">
-                <h3>Roulette</h3>
-                <p>Spin the wheel and test your luck!</p>
-            </div>
-            <div class="game-card">
-                <img src="https://via.placeholder.com/300" alt="Game 3">
-                <h3>Crash</h3>
-                <p>Bet and cash out before the crash!</p>
-            </div>
-        </div>
-    </div>
+    <p>Darryl is a world-renowned celebrity, known for his charm, wit, and unforgettable personality. Don't miss this once-in-a-lifetime opportunity!</p>
 
-    <!-- Promotions Section -->
-    <div class="promotions-section" id="promotions">
-        <h2>Promotions</h2>
-        <div class="promotion-card">
-            <h3>Welcome Bonus</h3>
-            <p>Get 500 free coins when you sign up and verify your account!</p>
-        </div>
-        <div class="promotion-card">
-            <h3>Daily Rewards</h3>
-            <p>Log in every day to claim free coins and items.</p>
-        </div>
+    <div class="features">
+      <div class="feature">
+        <h3>🌟 Exclusive Access</h3>
+        <p>Get exclusive access to Darryl's world. Enjoy private conversations, games, and more!</p>
+      </div>
+      <div class="feature">
+        <h3>🍕 Dinner Included</h3>
+        <p>Enjoy a gourmet dinner with Darryl. He might even cook for you!</p>
+      </div>
+      <div class="feature">
+        <h3>📸 Photo Op</h3>
+        <p>Take home a signed photo to remember your incredible night.</p>
+      </div>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <div class="footer">
-        <p>&copy; 2023 GameOdds. All rights reserved. | <a href="#terms">Terms of Service</a> | <a href="#privacy">Privacy Policy</a></p>
-    </div>
+  <footer>
+    <p>Disclaimer: This is a fictional website. Darryl is not real (or is he?).</p>
+  </footer>
+
+  <script>
+    // Roulette Wheel Functionality
+    function spinRoulette() {
+      const wheel = document.getElementById('roulette-wheel');
+      const spinDuration = 5000; // 5 seconds
+      const randomDegree = Math.floor(Math.random() * 360) + 1440; // Random spin (at least 4 full rotations)
+
+      wheel.style.transform = `rotate(${randomDegree}deg)`;
+      wheel.style.transition = `transform ${spinDuration / 1000}s ease-out`;
+
+      // Display result after spin
+      setTimeout(() => {
+        const resultDegree = randomDegree % 360;
+        let result = "";
+        if (resultDegree < 45) result = "Red: Dinner with Darryl!";
+        else if (resultDegree < 90) result = "Green: A Selfie with Darryl!";
+        else if (resultDegree < 135) result = "Blue: A Signed Poster!";
+        else if (resultDegree < 180) result = "Yellow: A Virtual Hangout!";
+        else if (resultDegree < 225) result = "Purple: A Mystery Gift!";
+        else if (resultDegree < 270) result = "Orange: A Shoutout from Darryl!";
+        else if (resultDegree < 315) result = "Pink: A Personalized Message!";
+        else result = "Cyan: A Chance to Spin Again!";
+
+        alert(`Congratulations! You won: ${result}`);
+      }, spinDuration);
+    }
+
+    // Book Now Function
+    function bookNow() {
+      alert("Congratulations! You've booked your night with Darryl. Get ready for the time of your life!");
+    }
+  </script>
 </body>
 </html>
